src/assets/css/stylesheet.css
/* ... */
	footer .topFooter .topFooterWrapper .footerHdin::after {content: none;}
	footer .topFooter .logoWrapper{display: block;margin-bottom: 20px;}
	footer .topFooter .logoWrapper img{max-width: 170px;}
	footer .topFooter .footerPara{font-size: 16px; line-height:24px;color: #999; font-weight: 300;padding: 0px;}
	footer .topFooter .footerLinks{margin: 0px;margin-top: -8px;}
	footer .topFooter .footerLinks > li{font-size: 16px;line-height: 33px;color: #999;}
	footer .topFooter .footerLinks > li a{color: #999;}
	footer .topFooter .footerLinks > li a:hover{color: #f8c534;}
	footer .topFooter .footerSocialLinks{display: flex;flex-flow: row wrap;justify-content: flex-start;align-items: flex-start;}
	footer .topFooter .footerSocialLinks > li{margin-right: 7px;}
	footer .topFooter .footerSocialLinks > li img{opacity: 0.6;}
	footer .topFooter .footerSocialLinks > li img:hover{opacity: 1;}
	footer .bottomFooter{background: #101010;padding: 16px 0px;}
	footer .bottomFooter p{padding: 0px;font-size: 14px;color: rgba(255,255,255,0.5);line-height: 26px;}
	footer .bottomFooter p a{color: rgba(255,255,255,0.5)}
	footer .bottomFooter p a:hover{color: #FFF;}
	footer .bottomFooter .bottomFooterRght p{float: right;}
/* Footer Ends */

	.latestNewsDetails{background: url("../images/latest_news_banner.jpg");background-repeat: no-repeat;background-size: cover;}
	.latestNewsDetails .latestNewsWrapper{padding: 30px 40px 70px;background: url("../images/latest_news_top_banner.jpg");background-repeat: no-repeat;background-size: cover;}
	.latestNewsDetails .latestNewsWrapper h1{font-size: 50px;line-height: 54px;font-family: 'Roboto Condensed', sans-serif;font-weight: 700;color: #FFF;margin-bottom: 20px;margin-top: 0px;}
	.latestNewsDetails .latestNewsWrapper p{font-size: 16px;line-height: 26px;color: #FFF;font-family: 'Open Sans';padding: 0px;}
	.latestNewsDetails .latestNewsDetailsSlider{background: #111111;padding: 30px 40px;}
	.latestNewsDetails .latestNewsDetailsSlider .latestNewsImg{width: 100%;}
	.latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt{padding: 20px;background: #242424;width: 100%;}
	.latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt h3{margin: 0px;font-size: 14px;line-height: 26px;text-align: center;color: #FFF;}
	.latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt h3 a{margin: 0px;font-size: 14px;line-height: 26px;text-align: center;color: #FFF;}
	.latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt h3 a:hover, .latestNewsDetails .latestNewsDetailsSlider .latestNewsTxt h3 a:focus{color:#f8c534;}
	.latestNewsDetails .latestNewsDetailsSlider .owl-prev{position: absolute;left: 20px;top: 50%;transform: translate(-50%,-50%);}
	.latestNewsDetails .latestNewsDetailsSlider .owl-next{position: absolute;right: 20px;top: 50%;transform: translate(50%,-50%);}
	.latestNewsDetails .latestNewsDetailsSlider .owl-nav img{max-width: 12px;opacity: 0.5;transition:all 0.3s ease; -ms-transition:all 0.3s ease; -webkit-transition:all 0.3s ease; -o-transition:all 0.3s ease; -moz-transition:all 0.3s ease;}
	.latestNewsDetails .latestNewsDetailsSlider .owl-nav img:hover{opacity: 1;}

/* Login Page Starts */
	.loginDetails{background: url("../images/login_banner.jpg");background-repeat: no-repeat;background-size: cover;}
	.loginDetails .loginDetailsWrapper{display: flex;flex-flow: row wrap;justify-content: flex-end;align-items: center;}
	.loginDetails .loginDetailsWrapper .loginRghtWrapper{background: rgba(255,255,255,0.4);padding: 30px;width: 48.5%;z-index: 10;}
	.loginDetails .loginDetailsWrapper .loginLftWrapper{position: absolute;top: 50%;left: -63px;transform: translate(0,-50%);z-index: 9;}
	.loginDetails .formWrapper{background: #FFF;padding: 40px;}
	.loginDetails .formWrapper h3{font-size: 38px;line-height: 28px;margin-bottom: 12px;font-family: 'Roboto Condensed', sans-serif;font-weight: 700;color: #000;display: flex;flex-flow: row wrap;align-items: center;margin-top: 0px;}
	.loginDetails .formWrapper h3 .licnWrapper{margin-right: 10px;}
	.loginDetails .formWrapper p{color: #828282;font-weight: 400;font-size: 15px;line-height: 26px;font-family: 'Open Sans';}
	.loginDetails .formWrapper form{margin-top: 20px !important;}
	.loginDetails .formWrapper form .form-group{margin-bottom: 20px;}
	.loginDetails .formWrapper form .form-group.chkFrmGrp{display: flex; flex-flow: row wrap; align-items: center;}
	.loginDetails .formWrapper form .form-group.rmbrFrgtPswd{display: flex; flex-flow: row wrap; align-items: center;justify-content: space-between;}
	.loginDetails .formWrapper form .form-group.rmbrFrgtPswd .rmembrPswd{display: flex; flex-flow: row wrap; align-items: center;}
	.loginDetails .formWrapper form .form-group .lred:hover{text-decoration: underline !important;}
	.loginDetails .formWrapper form .form-group .frgtPsswd{float: right;display: block;color: #e41b24;font-size: 13px;}
	.loginDetails .formWrapper form .form-group .frgtPsswd:hover{text-decoration: underline !important;}
	.loginDetails .formWrapper form .form-group label{color: #a9a9a9;font-weight: 400;font-size: 13px;font-family: 'Open Sans';margin-bottom: 0px;}
	.loginDetails .formWrapper form .form-group .rmbrMe{vertical-align: middle;}
	.loginDetails .formWrapper form input[type="checkbox"]{margin-top: 0px; margin-right: 10px;}
	.loginDetails .formWrapper form input[type="text"], .loginDetails .formWrapper form input[type="password"], .loginDetails .formWrapper form input[type="email"]{border: 1px solid #e1e1e1;padding: 12px;width: 100%;border-radius: 2px;font-size: 14px;font-weight: 400;color: rgba(0,0,0,0.55);line-height: 28px;}
/* ... */

